# SistemaSolarOpenGL

./: README.md
phase1/: CMakeLists.txt
phase1/3d_files/: box.3d  box_2_3.3d  cilinder.3d  cone.3d  cone_1_2_4_3.3d  plane.3d  plane_2_3.3d  sphere_1_10_10.3d  torus.3d
phase1/engine/: engine.cpp  engine.hpp  figure.cpp  figure.h
phase1/generator/: generator.hpp
phase2/: .gitignore  CMakeLists.txt
phase2/engine/: engine.cpp  engine.hpp  figure.cpp  figure.h
phase2/engine/Parsing/: parser.cpp  parser.hpp
phase2/generator/: generator.cpp
phase2/xml_files/: solar_system.xml
phase3/: .gitignore  CMakeLists.txt  main.cpp
phase3/3d_files/: bezier_10.3d  sphere.3d  torus.3d
phase3/engine/: catmull-rom.cpp  engine.cpp  figure.cpp  figure.h  tMatrix.cpp  tMatrix.h
phase3/engine/Parsing/: parser.cpp
phase3/generator/: generator.cpp  generator.hpp
phase3/xml_files/: solar_system.xml
phase4/: CMakeLists.txt
phase4/3d_files/: bezier_10.3d  sphere.3d  torus.3d
phase4/engine/: catmull-rom.cpp  catmull-rom.h  color.cpp  color.h  engine.cpp  engine.hpp  figure.cpp  figure.h  light.cpp  light.h  tMatrix.cpp  tMatrix.h
phase4/engine/Parsing/: parser.cpp  parser.hpp
phase4/generator/: generator.cpp
phase4/xml_files/: solar_system.xml
